After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728395 - Moving maximized window to other monitor makes panel disappear
Moving maximized window to other monitor makes panel disappear
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
3.12.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2014-04-17 05:50 UTC by Tuomas Kuosmanen
Modified: 2014-04-17 16:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window: Queue a fullscreen check when moving between monitors (1003 bytes, patch)
2014-04-17 09:31 UTC, Florian Müllner
committed Details | Review

Description Tuomas Kuosmanen 2014-04-17 05:50:05 UTC
(GNOME 3.12 from hughsie's fedora 20 COPR)

Requirements: two monitors set up in gnome, one primary and other secondary.
Do this:

1. start gedit and have it on the primary screen (with the top panel)
2. hit F11 to fullscreen it
3. hit win-key/super/whatever to get to the window overwiew mode
4. drag the now-fullscreened gedit to the secondary monitor
5. click the gedit window to exit overview mode and focus gedit again

-> It correctly fullscreens it on the other screen now, 
but my panel disappears. It reappears when I focus another 
window and back.

A sort of reverse phenomenon happens when I do this starting from the secondary screen: move app to secondary screen, fullscreen, move to primary via overview: app goes fullscreen but panel stubbornly stays on top, covering the top of the window.
Comment 1 Florian Müllner 2014-04-17 09:31:30 UTC
Created attachment 274585 [details] [review]
window: Queue a fullscreen check when moving between monitors

We track changes to windows fullscreen state and stacking order
to determine a monitor's in-fullscreen state, but missed the
obvious case of moving a fullscreen window between monitors.
Comment 2 Jasper St. Pierre (not reading bugmail) 2014-04-17 15:20:03 UTC
Review of attachment 274585 [details] [review]:

Of course.
Comment 3 Florian Müllner 2014-04-17 16:33:09 UTC
Attachment 274585 [details] pushed as a2fb2c0 - window: Queue a fullscreen check when moving between monitors